--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -76,7 +76,7 @@
         <div class="title">Buy</div>
         <div class="text-content">Find your dream home among our list of houses</div>
         <div class="center-button">
-          <button mat-raised-button class="search">Buy your dream house</button>
+          <button mat-raised-button class="button submit-button">Buy your dream house</button>
         </div>
       </mat-card>
     </div>
@@ -90,7 +90,7 @@
         <div class="title">Sell</div>
         <div class="text-content">Find the best seller for your home</div>
         <div class="center-button">
-          <button mat-raised-button class="search">Sell at the best price</button>
+          <button mat-raised-button class="button submit-button">Sell at the best price</button>
         </div>
       </mat-card>
     </div>
@@ -104,7 +104,7 @@
         <div class="title">Rent</div>
         <div class="text-content">Explore our best options in the market</div>
         <div class="center-button">
-          <button mat-raised-button class="search">Find a room</button>
+          <button mat-raised-button class="button submit-button">Find a room</button>
         </div>
       </mat-card>
     </div>
@@ -114,6 +114,7 @@
   <ng-container *ngIf="isMobile">
     <ngb-carousel  (click)="fireEvent($event)">
         <ng-template ngbSlide  *ngFor="let item of items">
+          <div class="cubes">
         <div class="card">
           <mat-card>
             <div class="icon">
@@ -124,9 +125,10 @@
             <div class="title">{{item.title}}</div>
             <div class="text-content">{{item.description}}</div>
             <div class="center-button">
-              <button mat-raised-button class="search">{{item.buttonText}}</button>
+              <button mat-raised-button class="button submit-button">{{item.buttonText}}</button>
             </div>
           </mat-card>
+          </div>
           </div>
         </ng-template>
     </ngb-carousel>
