--- a/src/app/shared/component/filter/filter-container/filter-container.component.html
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.html
@@ -1,3 +1,5 @@
+
+<div class="search-bar">
 <app-filter-search-on-view *ngIf="router.url.includes('/search')"></app-filter-search-on-view>
 <div class="column background" *ngIf="router.url.includes('/home')">
     <div class=center-filter>
@@ -36,4 +38,5 @@
         </div>
     </div>
 
+</div>
 </div>
