--- a/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
+++ b/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
@@ -27,7 +27,7 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <div class="col-3 search-buttons">
+      <div class="search-buttons">
           <button mat-raised-button class="button primary-button" (click)="openMoreSearchOptions()">
             <div class="material-icons">
               fact_check
