--- a/src/app/modules/add-listing/card/card.component.scss
+++ b/src/app/modules/add-listing/card/card.component.scss
@@ -11,7 +11,7 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .card {
-  // position: relative;
+
   flex: 0 0 240px;
   width: 300px;
   height: 400px;
@@ -27,6 +27,8 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   box-sizing: border-box;
   transition: all 300ms ease-in-out 0s;
   flex-shrink: 0;
+  border-right: 5px solid red;
+  border-image: linear-gradient(to top, #1c4cc5, #ff4081) 1 stretch;
 }
 .card:hover {
   transform: scale(1.02) translate(0px, -8px);
