--- a/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.scss
+++ b/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.scss
@@ -21,3 +21,10 @@ ul{
     -moz-columns: 2;
     list-style-type: none;
 }
+
+.form-side {
+  padding-top: 20px;
+  padding-left: 20px;
+  border-right: 5px solid red;
+  border-image: linear-gradient(to top, #1c4cc5, #ff4081) 1 stretch;
+}
